feature(refactor-project): refactor codes - move token from request body to headers - make swagger doc host address flexible - remove unnecessary call to response - move transform runtime plugin to babelrc
